.pkgstage/vitte-2.1.1/root/usr/local/share/vitte/src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.txt.snap
error[TYPECK_E_ASSIGN_MISMATCH]: cannot assign string to i32
  --> src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9
   |
 4 | let x: i32 = 0
   |     - variable declared here as i32
 8 | set x = "hello"
   |         ^^^^^^^ expected i32, found string
   |
note: clear, contextual, and correction-oriented diagnostics
help: trace the expected type origin and the found value origin before changing code
  suggestion: replace src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9 replace the expression with a value of the expected type (medium confidence) [manual] because the expected and found types disagree
  suggestion: help src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9 change the annotation only if the broader API contract is wrong (medium confidence) [manual] because type fixes should preserve the declared contract
  suggestion: replace src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9 replace the highlighted expression with one that satisfies the expected type (medium confidence) [maybe_machine] because type-directed-edit
  suggestion: replace src/vitte/compiler/tests/diagnostics/typeck/assign_mismatch.vit:8:9 replace the string literal with an integer literal => `0` (medium confidence) [machine] because the target binding `x` is declared as `i32`

Pipeline:
  phase=typeck -> step=type checking -> family=type-checking -> correction_strategy=type-directed-edit -> recovery_scope=current-expression -> confidence=medium -> lexer -> parser -> AST -> HIR -> sema -> typeck [FAILED]
docs: docs://language/type-system/assignment-compatibility
